--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>NgInputOutput</title>
-  <base href="/ng-input-output/">
+  <base href="https://gopi-infamous-developer.github.io/ng-ngrx-store/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.f4b82c67827851478eb1.css"></head>
